update haml - side-bar main

--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,7 +2,7 @@
   .header
     .header-items
       .header-items__name
-        User Name
+        user name
       %ul.header-items__icons
         %li.icon
         = link_to "#" do
@@ -13,3 +13,13 @@
           = icon('fa', 'cog',class: "icon")
           %span<>
   .main
+    .main-items
+      .main-items__group-name
+        group name 1
+      .main-items__message
+        message 1
+    .main-items
+      .main-items__group-name
+        group name 2
+      .main-items__message
+        message 2
