--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  // text-decoration: none; 
 }
 
 .wrapper {
@@ -56,16 +57,47 @@
 
 .chat-main{
   width: calc(100vw - 300px);
-  &__header {
+  .header {
     height: 100px;
     background-color: #ffffff;
     border-bottom: solid 1px #eeeeee;
+    padding: 0 40px;
+    .group{
+      float: left;
+      &__group-name {
+        margin-top: 35px;
+        font-size: 20px;
+        color:#333333;
+      }
+      &__members {
+        display: flex;
+        margin-top: 15px;
+        font-size: 12px;
+        color:#999999;
+        .member {
+          margin-left:5px;
+        }
+      }
+    }
+    .edit-btn {
+      float: right;
+      display: inline-block;
+      text-decoration: none;
+      margin-top: 28px;
+      width: 72px;
+      height: 40px;
+      line-height: 40px;
+      padding: 0 20px;
+      border: solid 1px #38aef0;
+      font-size: 16px;
+      color: #38aef0;
+    }
   }
-  &__main {
+  .main {
     height: calc(100vh - 100px - 90px);
     background-color: #fafafa;
   }
-  &__footer {
+  .footer {
     height: 90px;
     background-color: #d2d2d2;
   }
