update haml - main main

--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -12,4 +12,28 @@
     =link_to "#", class: "edit-btn" do
       Edit
   .main
-  .ooter
+    .message-items
+      .message-items__title
+        .member
+          masa
+        .timestamp
+          2019/11/20(Wed)17:43:01
+      .message-items__message
+        おはよう
+    .message-items
+      .message-items__title
+        .member
+          masa
+        .timestamp
+          2019/11/20(Wed)17:43:01
+      .message-items__message
+        こんにちは
+    .message-items
+      .message-items__title
+        .member
+          masa
+        .timestamp
+          2019/11/20(Wed)17:43:01
+      .message-items__message
+        おやすみ
+  .footer
