--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -42,6 +42,7 @@
   .main {
     height: calc(100vh - 100px);
     background-color: #2f3e51;
+    overflow: scroll;
     .main-items {
       padding:20px 20px 40px;
       &__group-name {
@@ -96,6 +97,29 @@
   .main {
     height: calc(100vh - 100px - 90px);
     background-color: #fafafa;
+    padding: 35px 40px 0;
+    overflow: scroll;
+    .message-items {
+      &__title {
+        margin-bottom: 12px;
+        display: flex;
+        .member {
+          color: #333333;
+          font-size: 16px;
+          font-weight: bold;
+        }
+        .timestamp {
+          color: #999999;
+          font-size: 12px;
+          padding-left: 10px;
+        }
+      }
+      &__message {
+        margin-bottom: 46px;
+        color: #434a54;
+        font-size: 14px;
+      }
+    }
   }
   .footer {
     height: 90px;
