--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -37,3 +37,13 @@
       .message-items__message
         おやすみ
   .footer
+    %form.box
+      %input.box__text{type: 'text', placeholder: 'type a message'}
+      %label
+        %input.box__file-btn{type: 'file'}
+        %span.box__icon
+          = icon('fa', 'image',class: "icon")
+    %form
+      %input.send-btn{type: 'submit', value: 'Send'}
+
+
