--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -124,5 +124,44 @@
   .footer {
     height: 90px;
     background-color: #d2d2d2;
+    padding: 20px 40px;
+    .box {
+      float: left;
+      width: calc(100vw - 300px - 40px - 15px - 100px - 40px);
+      height: 50px;
+      background-color: #fafafa;
+      &__text {
+        float: left;
+        padding: 0 10px;
+        height: 50px;
+        width: calc(100% - 40px);
+        border: none;
+        background-color: #fafafa;
+      }
+      &__file-btn{
+        display: none;
+      }
+      &__icon {
+        float: right;
+        margin: auto 10px;
+        font-size: 20px;
+        line-height: 50px;
+        background-color:#fafafa;
+      }
+      &__icon :hover {
+        cursor: pointer;
+      }
+    }
+    .send-btn {
+      float: right;
+      width: 100px;
+      height: 50px;
+      margin-left: 15px;
+      background-color: #38aef0;
+      color: #fafafa;
+      text-decoration: none;
+      text-align: center;
+      line-height: 50px;
+    }
   }
 }
