--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -11,27 +11,27 @@
 .side-bar {
   width:300px;
   color: #ffffff;
-  font-weight: bold;
   .header {
     height: 100px;
     background-color: #253141;
     display: flex;
+    justify-content: center;
+    align-items: center;
     .header-items {
       height: 20px;
       width:260px;
-      margin: auto;
       line-height: 20px;
       display: flex;
       justify-content: space-between;
       &__name {
         font-size: 16px;
+        font-weight: bold;
+        width: calc(100% - 60px);
       }
       &__icons {
         width:60px;
-        display: flex;
-        justify-content: flex-end;
-        color: #ffffff;
         .icon {
+          float: right;
           display:inline-block;
           margin-left: 5px;
           color: #ffffff;
