--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -76,13 +76,14 @@
         font-size: 12px;
         color:#999999;
         .member {
+          display: inline-block;
           margin-left:5px;
         }
       }
     }
     .edit-btn {
       float: right;
-      display: inline-block;
+      display: block;
       text-decoration: none;
       margin-top: 28px;
       width: 72px;
