--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,9 @@
-@import "reset";
-@import "modules/messages";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+
+@import "reset";
+@import "config/colors";
+
+@import "modules/messages";
+@import "modules/side-bar";
+@import "modules/main";
