add style to send-btn

--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -44,6 +44,6 @@
         %span.box__icon
           = icon('fa', 'image',class: "icon")
     %form
-      %input.send-btn{type: 'submit', value: 'Send'}
+      %input.send-btn{type: 'submit', value: 'Send', style: 'cursor:pointer'}
 
 
