--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 @import "reset";
 @import "config/colors";
 
+@import "modules/user";
 @import "modules/messages";
 @import "modules/side-bar";
 @import "modules/main";
