--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -9,3 +9,5 @@ $side-barHeaderColor:#253141;
 $side-barMainColor:#2f3e51;
 $mainMainColor:#fafafa;
 $mainFooterColor:#d2d2d2;
+
+$alertOrange: #F35500;
