--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -9,7 +9,7 @@
           member1
         %li.member
           member2
-    =link_to "#", class: "edit-btn" do
+    =link_to new_group_path, class: "edit-btn" do
       Edit
   .main
     .message-items
