addes scss file - _group.scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,8 @@
 
 @import "modules/flash";
 @import "modules/user";
+@import "modules/group";
+
 @import "modules/messages";
 @import "modules/side-bar";
 @import "modules/main";
