--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -12,30 +12,18 @@
     =link_to new_group_path, class: "edit-btn" do
       Edit
   .main
-    .message-items
-      .message-items__title
-        .member
-          masa
-        .timestamp
-          2019/11/20(Wed)17:43:01
-      .message-items__message
-        おはよう
-    .message-items
-      .message-items__title
-        .member
-          masa
-        .timestamp
-          2019/11/20(Wed)17:43:01
-      .message-items__message
-        こんにちは
-    .message-items
-      .message-items__title
-        .member
-          masa
-        .timestamp
-          2019/11/20(Wed)17:43:01
-      .message-items__message
-        おやすみ
+    - @messages.each do |message|
+      .message-items
+        .message-items__title
+          .member
+            = message.user.name
+          .timestamp
+            = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
+        .message-items__message
+          .content
+            = message.content if message.content.present?
+          .image
+            = image_tag message.image.url if message.image.present?
   .footer
     = form_for [@group, @message] do |f|
       .box
