--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -13,17 +13,7 @@
       Edit
   .main
     - @messages.each do |message|
-      .message-items
-        .message-items__title
-          .member
-            = message.user.name
-          .timestamp
-            = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
-        .message-items__message
-          .content
-            = message.content if message.content.present?
-          .image
-            = image_tag message.image.url if message.image.present?
+      = render partial: "message-items", locals: { message: message }
   .footer
     = form_for [@group, @message] do |f|
       .box
