Created method in group model
For side-bar-main.haml

--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -19,4 +19,4 @@
           .main-items__group-name
             = group.name
           .main-items__message
-            messageはまだありません（仮）
+            = group.show_last_message
