--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -2,13 +2,12 @@
   .header
     .group
       .group__group-name
-        group-name
+        = @group.name
       %ul.group__members
         Member : 
         %li.member
-          member1
-        %li.member
-          member2
+          - @group.users.each do |user|
+            = user.name
     =link_to edit_group_path(@group.id), class: "edit-btn" do
       Edit
   .main
